--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color</title>
-  </head>
-  <body>
-    <canvas></canvas>
-    <script src="./script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Color</title>
+</head>
+
+<body>
+  <canvas></canvas>
+  <img id="input" width="400">
+  <input type="file" name="" id="load">
+  <script src="./script.js"></script>
+</body>
+
 </html>
