Switch size and funtion name

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
   <title>Color</title>
 </head>
 
 <body>
-  <canvas></canvas>
-  <img id="input" width="400">
-  <input type="file" name="" id="load">
+  <h1 class="title">Color average</h1>
+  <div class="wrapper">
+    <canvas></canvas>
+    <img id="input" width="400">
+    <input type="file" name="" id="load">
+    <p id="hex"></p>
+  </div>
   <script src="./script.js"></script>
 </body>
 
