--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
   <title>Color</title>
 </head>
 
 <body>
-  <h1 class="title">Color average</h1>
-  <div class="wrapper">
-    <canvas></canvas>
-    <img id="input" width="400">
-    <input type="file" name="" id="load">
-    <p id="hex"></p>
+  <h1 class="title">Colorient</h1>
+  <div class="outer-wrapper">
+    <div class="wrapper">
+      <canvas></canvas>
+      <img class="input" id="input" width="400">
+      <input class="file__input" type="file" name="" id="load">
+      <p id="hex"></p>
+    </div>
   </div>
   <script src="./script.js"></script>
 </body>
