--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-  <title>Color</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet" />
+  <title>Colorient</title>
 </head>
 
 <body>
@@ -14,9 +14,10 @@
   <div class="outer-wrapper">
     <div class="wrapper">
       <canvas></canvas>
-      <img class="input" id="input" width="400">
-      <input class="file__input" type="file" name="" id="load">
+      <img class="input" id="input" width="400" />
+      <input class="file__input" type="file" name="" id="load" />
       <p id="hex"></p>
+      <div id="resultCircle" class="result-circles"></div>
     </div>
   </div>
   <script src="./script.js"></script>
