--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet" />
+  <meta name="title" content="Colorient">
+  <meta name="description"
+    content="Colorient is a project I wanted to do for a long time, so basicaly I upload an image and then get the average color of it">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:title" content="Colorient">
+  <meta property="og:description"
+    content="Colorient is a project I wanted to do for a long time, so basicaly I upload an image and then get the average color of it">
+  <meta property="og:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:title" content="Colorient">
+  <meta property="twitter:description"
+    content="Colorient is a project I wanted to do for a long time, so basicaly I upload an image and then get the average color of it">
+  <meta property="twitter:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
   <title>Colorient</title>
 </head>
 
