--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <meta property="og:title" content="Colorient">
   <meta property="og:description"
     content="Colorient is a project I wanted to do for a long time, so basicaly I upload an image and then get the average color of it">
-  <meta property="og:image"
-    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="og:image" content="./screen.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
