--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <meta property="twitter:title" content="Colorient">
   <meta property="twitter:description"
     content="Colorient is a project I wanted to do for a long time, so basicaly I upload an image and then get the average color of it">
-  <meta property="twitter:image"
-    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="twitter:image" content="./screen.png">
   <title>Colorient</title>
 </head>
 
